tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/comment-us.stderr
TOML parse error at line 1, column 25
  |
1 | comment-us = "ctrl-_" # 
  |                         ^
expected newline, `#`
